# qposit

./: .gitignore  Caddyfile  Caddyfile-local  Cargo.toml  DEPLOYMENT.md  DEVLOG.md  Dockerfile  README.md  docker-compose.yml  flake.nix  justfile  launch.bash  qposit.service
db/migrations/: 20240225165703_init.sql
lobster/: README.md
lobster/src/: book_details.rs  lib.rs  market_update.rs  order_request.rs  reject_reason.rs
lobster/src/accounting/: book_portfolio.rs  math.rs  mod.rs  portfolio_manager.rs  user_portfolio.rs
lobster/src/orderbook/: fill.rs  mod.rs
python/: book_tracker.py  init.py  init2.py  markets.toml  quoter.py  random_taker.py  seed_markets.py
python/archive/: fixed_quoter.py
scripts/: book_tracker.py  markets.toml  quoter.py  seed_markets.py
scripts/archive/: init2.py  misc.py  quoter.py  random_taker.py
seeds/: seed.sql  seed_prod.sql
src/: README.md  app_state.rs  auth.rs  authentication.rs  bootstrap.rs  main.rs  util.rs
src/actors/: book_service.rs  matcher.rs  matcher_request.rs  mod.rs  writer.rs
src/api/: README.md  api_error.rs  auth.rs  book_event.rs  books.rs  events.rs  feed.rs  markets.rs  mod.rs  order_request.rs  orders.rs  positions.rs  trades.rs  user.rs
src/lobster/: Cargo.toml  README.md
src/lobster/src/: book_event.rs  lib.rs  math.rs  order_request.rs  reject_reason.rs
src/lobster/src/orderbook/: mod.rs  order.rs  side.rs  v2.rs
src/models/: book.rs  event.rs  invite.rs  market.rs  mod.rs  order.rs  position.rs  session.rs  session_record.rs  trade.rs  user.rs  user_record.rs
src/pages/: README.md  about.rs  events.rs  feed.rs  home.rs  login.rs  market.rs  markets.rs  mod.rs  not_found.rs  order.rs  orderbook.rs  orders.rs  profile.rs  signup.rs  users.rs
src/pages/templates/: about.rs  about_page.rs  book.rs  event.rs  home.rs  home_page.rs  login.rs  login_form.rs  login_page.rs  market.rs  market_page.rs  market_update.rs  mod.rs  not_found.rs  open_orders.rs  order_form.rs  orderbook.rs  positions.rs  profile.rs  signup.rs  signup_form.rs
src/router/: about.rs  home.rs  login.rs  mod.rs  session.rs  signup.rs
src/services/: book_service.rs  matcher.rs  matcher_request.rs  writer.rs
src/templates/: about.rs  home.rs  login.rs  mod.rs  navbar.rs  profile.rs  signup.rs
src/web/: about.rs  auth.rs  events.rs  home.rs  market_update.rs  orders.rs  signup.rs
src/web/templates/: event.rs  market.rs  market_update.rs  mod.rs  order_form.rs  orderbook.rs  profile.rs  signup.rs
static/: htmx.min.js  htmx.ws.js  main.css  pico.min.css
templates/: about.html  base.html  book.html  event.html  home.html  login.html  login_form.html  main.html  market.html  market_card.html  market_update.html  navbar.html  not_found.html  open_orders.html  open_positions.html  order_form.html  orderbook.html  profile.html  signup.html  signup_form.html
