[package]
name = "basic_site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", features = ["ws"] }
axum-extra = { version = "0.9.2", features = ["typed-header", "cookie"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
askama = "0.12.1"

sqlx = { version = "0.7.3", features = ["runtime-tokio", "sqlite", "macros"]}
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15.7"
rand = "0.8.5"
time = "0.3.34"

tracing = "0.1"
tracing-subscriber = "0.3"
argon2 = "0.5.3"