[package]
name = "qposit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["ws", "macros"] }
axum-extra = { version = "0.9.2", features = ["typed-header", "cookie"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
askama = { version = "0.12.1", features = ["markdown"] }
askama_axum = "0.4.0"

sqlx = { version = "0.7.3", features = ["runtime-tokio", "sqlite", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
dotenvy = "0.15.7"
rand = "0.8.5"
time = { version = "0.3.36", features = ["formatting"] }

tracing = "0.1"
tracing-subscriber = "0.3"
argon2 = "0.5.3"
lobster = { path = "./src/lobster" }

utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "*", features = ["axum"] }
utoipa-redoc = { version = "*", features = ["axum"] }
utoipa-rapidoc = { version = "*", features = ["axum"] }
