[package]
name = "qposit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["ws", "macros"] }
axum-extra = { version = "0.9.3", features = ["typed-header", "cookie"] }
tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread"] }
askama = { version = "0.12.1", features = ["markdown"] }
askama_axum = "0.4.0"

sqlx = { version = "0.8.0", features = ["runtime-tokio", "sqlite", "macros"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.120", features = ["preserve_order"] }
dotenvy = "0.15.7"
rand = "0.8.5"
time = { version = "0.3.36", features = ["formatting"] }

tracing = "0.1.40"
tracing-subscriber = "0.3.18"
argon2 = "0.5.3"
lobster = { path = "./lobster" }

utoipa = { version = "4.2.3", features = ["axum_extras", "preserve_path_order", "preserve_order", "non_strict_integers"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
# utoipa-redoc = { version = "*", features = ["axum"] }
# utoipa-rapidoc = { version = "*", features = ["axum"] }
utoipa-scalar = { version = "0.1.0", features = ["axum"] }
